--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.class
 *.log
-
-# sbt specific
+*.idea
+*.iml
+.*.sw?
+.~*
 .cache/
 .history/
 .lib/
@@ -11,7 +13,6 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
-
-# Scala-IDE specific
 .scala_dependencies
 .worksheet
+*.sc
